unpackaged/objects/TMFC_TeamForce_User_Story__c.object
<CustomObject>
  <fields>
    <fullName>Affected_Personas__c</fullName>
    <description>Please specify the affected personas by this user story</description>
    <inlineHelpText>Please specify the affected personas by this user story</inlineHelpText>
    <label>Affected Personas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>All personas</fullName>
        </value>
        <value>
          <fullName>Classic - Customer Service</fullName>
        </value>
        <value>
          <fullName>Classic - Marketing</fullName>
        </value>
        <value>
          <fullName>Classic - Sales</fullName>
        </value>
        <value>
          <fullName>Lightning - Customer Service</fullName>
        </value>
        <value>
          <fullName>Lightning - Inside Sales</fullName>
        </value>
        <value>
          <fullName>Lightning - KOL</fullName>
        </value>
        <value>
          <fullName>Lightning - Marketing</fullName>
        </value>
        <value>
          <fullName>Lightning - Sales</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Development</fullName>
        </value>
        <value>
          <fullName>Einstein Analytics</fullName>
        </value>
        <value>
          <fullName>Integrations</fullName>
        </value>
        <value>
          <fullName>Engagement</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Assigned_Sandbox__c</fullName>
    <inlineHelpText>Add the environment where your development/activities are taking place</inlineHelpText>
    <label>Assigned Sandbox</label>
    <length>15</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Business_Doc_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when relevant business documentation is ready - (business reason/logic and training material)</inlineHelpText>
    <label>Business Doc ready</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CRM_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Request</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Case.RecordTypeId</field>
        <operation>equals</operation>
        <value>CRM Requests</value>
      </filterItems>
      <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Cancellation_reason__c</fullName>
    <description>Used to capture decision/reason behind cancelling a user story</description>
    <label>Cancellation reason</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>DevOpsWorkItemNumber__c</fullName>
    <description>The number of an Azure DevOps work item if this user story is linked to one.</description>
    <inlineHelpText>Enter only the number i.e. do not include # or any other non-numeric characters.</inlineHelpText>
    <label>DevOps Work Item Number</label>
    <length>5</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DevOpsWorkItemUrl__c</fullName>
    <formula>IF(
    ISBLANK(DevOpsWorkItemNumber__c),
    HYPERLINK("https://dev.azure.com/DSCRM/Development/_workitems/create/Epic?%5BSystem.Description%5D=" &amp; Name, "Create Epic") &amp; " | " &amp;
    HYPERLINK("https://dev.azure.com/DSCRM/Development/_workitems/create/Feature?%5BSystem.Description%5D=" &amp; Name, "Create Feature") &amp; " | " &amp;
    HYPERLINK("https://dev.azure.com/DSCRM/Development/_workitems/create/User%20Story?%5BSystem.Description%5D=" &amp; Name, "Create User Story")
    , 
    HYPERLINK("https://dev.azure.com/DSCRM/Development/_workitems/edit/" &amp; DevOpsWorkItemNumber__c, "Work Item #" &amp; DevOpsWorkItemNumber__c) 
)</formula>
    <label>DevOps Work Item Link</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Due_Date__c</fullName>
    <description>Add the planned due date - due date is when it should be available in production so not when development is done, make sure room exist for testing, documentation and training</description>
    <inlineHelpText>Add the planned due date - due date is when it should be available in production so not when development is done, make sure room exist for testing, documentation and training</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Product__c</fullName>
    <description>Used to track for which "product" we offer we have development activities etc.  - allows for keeping track of backlog and identify "problem areas"</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Teamforce_Products</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship field to be able to link user stories to projects.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>QAOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_User_Stories2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Release_Notes__c</fullName>
    <description>Please add here the notes to be taken to the release communication</description>
    <inlineHelpText>Please add here the notes to be taken to the release communication</inlineHelpText>
    <label>Release Notes</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Released_to_production__c</fullName>
    <description>This field is used and automatically set once a user story reaches the stage in production / closed</description>
    <inlineHelpText>This field is used and automatically set once a user story reaches the stage in production / closed</inlineHelpText>
    <label>Released to production</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Requester_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The country that submitted the CRM request - brought over from CRM Request</description>
    <label>Requester Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Reviewed_by_EU_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed by EU Team</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>RoadblockReason__c</fullName>
    <label>Roadblock Reason</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Awaiting Engagement Team Feedback</fullName>
        </value>
        <value>
          <fullName>Awaiting Feedback</fullName>
          <label>Awaiting External Feedback</label>
        </value>
        <value>
          <fullName>Technical Roadblock</fullName>
        </value>
        <value>
          <fullName>Pending on Salesforce</fullName>
        </value>
        <value>
          <fullName>Pending on External team</fullName>
        </value>
        <value>
          <fullName>Temporarily Paused</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SprintEndDate__c</fullName>
    <description>Visualizes the End Date of the Sprint from the Teamforce Sprint.</description>
    <formula>TMFC_TeamForce_Sprint__r.TMFC_Sprint_End_Date__c</formula>
    <label>Sprint End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>System_of_Origin__c</fullName>
    <description>Please determine here in which system this issue/bug was detected</description>
    <label>System of Origin</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria / Test Results</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>TMFC_As__c</fullName>
    <label>As...</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_I_want_to__c</fullName>
    <label>I want to...</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_Manual_Steps_Post_Deployment__c</fullName>
    <label>Manual Steps: Post-Deployment</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>TMFC_Manual_Steps_Pre_Deployment__c</fullName>
    <label>Manual Steps: Pre-Deployment</label>
    <length>5000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>TMFC_So_that__c</fullName>
    <label>So that...</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>TMFC_Story_Points__c</fullName>
    <inlineHelpText>XS &lt; 1/2 day
S &lt; 1 day
M = 2-5 days
L = 5-10 days
XL &gt; 10 days</inlineHelpText>
    <label>T-Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>XS</fullName>
        </value>
        <value>
          <fullName>S</fullName>
        </value>
        <value>
          <fullName>M</fullName>
        </value>
        <value>
          <fullName>L</fullName>
        </value>
        <value>
          <fullName>XL</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TMFC_TeamForce_Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamForce Epic</label>
    <referenceTo>TMFC_TeamForce_Epic__c</referenceTo>
    <relationshipLabel>TeamForce User Stories</relationshipLabel>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_TeamForce_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeamForce Sprint</label>
    <referenceTo>TMFC_TeamForce_Sprint__c</referenceTo>
    <relationshipLabel>TeamForce User Stories</relationshipLabel>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Design_Sign_Off_Date__c</fullName>
    <label>User Story Design Sign-Off Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Design_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story Design Sign-Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_User_Stories1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Dev_Sign_Off_Date__c</fullName>
    <label>User Story Dev Sign-Off Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Dev_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story Dev Sign-Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TeamForce_User_Stories</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Notes__c</fullName>
    <label>User Story Notes</label>
    <length>131072</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Priority__c</fullName>
    <label>User Story Priority</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>High</fullName>
        </value>
        <value>
          <fullName>Medium</fullName>
        </value>
        <value>
          <fullName>Low</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Status__c</fullName>
    <label>User Story Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>New</fullName>
          <default>true</default>
          <label>New</label>
        </value>
        <value>
          <fullName>Grooming</fullName>
        </value>
        <value>
          <fullName>Backlog</fullName>
        </value>
        <value>
          <fullName>Scheduled</fullName>
        </value>
        <value>
          <fullName>Dev in Progress</fullName>
        </value>
        <value>
          <fullName>Test in Progress</fullName>
        </value>
        <value>
          <fullName>Roadblock - paused</fullName>
        </value>
        <value>
          <fullName>Ready to dev integrate</fullName>
        </value>
        <value>
          <fullName>Ready for prod deploy</fullName>
        </value>
        <value>
          <fullName>In Production - Closed</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
        <value>
          <fullName>Code Merge Complete</fullName>
          <isActive>false</isActive>
          <label>Code Merge Complete</label>
        </value>
        <value>
          <fullName>Dev Complete</fullName>
          <isActive>false</isActive>
          <label>Dev Complete</label>
        </value>
        <value>
          <fullName>Dev to Begin</fullName>
          <isActive>false</isActive>
          <label>Dev to Begin</label>
        </value>
        <value>
          <fullName>Production</fullName>
          <isActive>false</isActive>
          <label>Production</label>
        </value>
        <value>
          <fullName>QA Complete</fullName>
          <isActive>false</isActive>
          <label>QA Complete</label>
        </value>
        <value>
          <fullName>QA in Progress</fullName>
          <isActive>false</isActive>
          <label>QA in Progress</label>
        </value>
        <value>
          <fullName>QA to Begin</fullName>
          <isActive>false</isActive>
          <label>QA to Begin</label>
        </value>
        <value>
          <fullName>Ready For Release</fullName>
          <isActive>false</isActive>
          <label>Ready For Release</label>
        </value>
        <value>
          <fullName>Ready for Design Sign-Off</fullName>
          <isActive>false</isActive>
          <label>Ready for Design Sign-Off</label>
        </value>
        <value>
          <fullName>Ready for Dev Sign-Off</fullName>
          <isActive>false</isActive>
          <label>Ready for Dev Sign-Off</label>
        </value>
        <value>
          <fullName>UAT Complete</fullName>
          <isActive>false</isActive>
          <label>UAT Complete</label>
        </value>
        <value>
          <fullName>UAT in Progress</fullName>
          <isActive>false</isActive>
          <label>UAT in Progress</label>
        </value>
        <value>
          <fullName>UAT to Begin</fullName>
          <isActive>false</isActive>
          <label>UAT to Begin</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TMFC_User_Story_Text__c</fullName>
    <formula>(IF(
ISBLANK(TMFC_As__c), 
"As a (Persona)", 
"As " &amp; TMFC_As__c
))

&amp;

(IF(
ISBLANK(TMFC_I_want_to__c), 
", I want to (Functionality)",
", I want to " &amp; TMFC_I_want_to__c
))

&amp;

(IF(
ISBLANK(TMFC_So_that__c), 
", so that (Value)",
", so that " &amp; TMFC_So_that__c
))</formula>
    <label>User Story Text</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Tech_Doc_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when technical documentation has been updated/is available</inlineHelpText>
    <label>Tech Doc ready</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TestStatus__c</fullName>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Open</fullName>
        </value>
        <value>
          <fullName>In Progress</fullName>
        </value>
        <value>
          <fullName>Done</fullName>
        </value>
        <value>
          <fullName>Not Relevant</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Bug/Issue</fullName>
        </value>
        <value>
          <fullName>Enhancement</fullName>
        </value>
        <value>
          <fullName>New Feature/Functionality</fullName>
        </value>
        <value>
          <fullName>Investigation</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>internal_comment__c</fullName>
    <description>Developer, please document here what you have done in the system</description>
    <inlineHelpText>Developer, please document here what you have done in the system</inlineHelpText>
    <label>Result Notes</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <label>TeamForce User Story</label>
  <listViews>
    <fullName>All_Jenn_s_open_user_stories</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>Requester_Country__c</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Mikelski</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>equals</operation>
      <value>New,Grooming,Backlog,Scheduled,Dev in Progress,Test in Progress,Roadblock - paused,Ready to dev integrate,Ready for prod deploy</value>
    </filters>
    <label>All Jenn's open user stories</label>
  </listViews>
  <listViews>
    <fullName>All_Majdi_s_User_Stories_OPEN</fullName>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>equals</operation>
      <value>Majdi</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>All Majdi's User Stories (OPEN)</label>
  </listViews>
  <listViews>
    <fullName>All_Manuel_s_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>contains</operation>
      <value>Majdi</value>
    </filters>
    <label>All Majdi's User Stories</label>
  </listViews>
  <listViews>
    <fullName>All_Miguel_s_GROOMING_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>equals</operation>
      <value>New,Grooming,Backlog</value>
    </filters>
    <filters>
      <field>Area__c</field>
      <operation>equals</operation>
      <value>Development</value>
    </filters>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>equals</operation>
      <value>Miguel,Roberto,Richard,Kevin Ruibin</value>
    </filters>
    <label>DEV TEAM (New/Grooming/Backlog)</label>
  </listViews>
  <listViews>
    <fullName>All_Mike_s_open_user_stories</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>Requester_Country__c</columns>
    <columns>Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Pilgrim</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>equals</operation>
      <value>New,Grooming,Backlog,Scheduled,Dev in Progress,Test in Progress,Roadblock - paused,Ready to dev integrate,Ready for prod deploy</value>
    </filters>
    <label>All Mike's open user stories</label>
  </listViews>
  <listViews>
    <fullName>All_Nihad_s_User_Stories_OPEN</fullName>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Aoussar</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>All Nihad's User Stories (OPEN)</label>
  </listViews>
  <listViews>
    <fullName>All_Nisreen_s_User_Stories_OPEN</fullName>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>equals</operation>
      <value>Nisreen</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>All Nisreen's User Stories (OPEN)</label>
  </listViews>
  <listViews>
    <fullName>All_Richard_s_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>contains</operation>
      <value>Richard</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>All Richard's User Stories</label>
  </listViews>
  <listViews>
    <fullName>All_Sebastian_s_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Fritsche</value>
    </filters>
    <label>All Sebastian's User Stories</label>
  </listViews>
  <listViews>
    <fullName>All_Tobias_s_User_Stories_OPEN</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Nygren</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>All Tobias's User Stories (OPEN)</label>
  </listViews>
  <listViews>
    <fullName>CIM_Integration_Open_Stories</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_So_that__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>TMFC_As__c</columns>
    <columns>Area__c</columns>
    <columns>Type__c</columns>
    <columns>Product__c</columns>
    <columns>Due_Date__c</columns>
    <columns>TMFC_User_Story_Text__c</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>Assigned_Sandbox__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CRM_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <filters>
      <field>Product__c</field>
      <operation>equals</operation>
      <value>Integration - CIM360</value>
    </filters>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>equals</operation>
      <value>Joey</value>
    </filters>
    <label>CIM Integration Open Stories</label>
  </listViews>
  <listViews>
    <fullName>Cherry_Picking_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>DEV TEAM: Backlog (Cherry picking)</label>
    <queue>SFDC_Code_Dev_Team</queue>
  </listViews>
  <listViews>
    <fullName>China_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_User_Story_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Requester_Country__c</field>
      <operation>equals</operation>
      <value>China</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>China User Stories</label>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>DEV_TEAM_Roadblock_Paused</fullName>
    <columns>NAME</columns>
    <columns>TMFC_User_Story_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>TMFC_User_Story_Notes__c</columns>
    <columns>TMFC_Story_Points__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>TMFC_TeamForce_Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>equals</operation>
      <value>Roadblock - paused</value>
    </filters>
    <filters>
      <field>Area__c</field>
      <operation>equals</operation>
      <value>Development</value>
    </filters>
    <filters>
      <field>OWNER.FIRST_NAME</field>
      <operation>equals</operation>
      <value>Miguel,Roberto,Richard,Kevin Ruibin</value>
    </filters>
    <label>DEV TEAM (Roadblock Paused)</label>
  </listViews>
  <listViews>
    <fullName>Development_All</fullName>
    <columns>NAME</columns>
    <columns>TMFC_I_want_to__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>TMFC_TeamForce_Sprint__c</columns>
    <columns>Assigned_Sandbox__c</columns>
    <columns>Due_Date__c</columns>
    <columns>TMFC_User_Story_Priority__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Area__c</field>
      <operation>equals</operation>
      <value>Development</value>
    </filters>
    <filters>
      <field>TMFC_User_Story_Status__c</field>
      <operation>notEqual</operation>
      <value>In Production - Closed,Cancelled</value>
    </filters>
    <label>Development - All</label>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <nameField>
    <displayFormat>TFUS-{000000000}</displayFormat>
    <label>TeamForce User Story ID</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>TeamForce User Stories</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
  <validationRules>
    <fullName>Add_cancellation_notes</fullName>
    <active>true</active>
    <description>Forces cancellation notes if a user story is cancelled</description>
    <errorConditionFormula>ISPICKVAL(TMFC_User_Story_Status__c, "Cancelled")  &amp;&amp;  ISBLANK(Cancellation_reason__c)</errorConditionFormula>
    <errorMessage>You must add cancellation notes before cancelling a User Story</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Add_personas</fullName>
    <active>true</active>
    <description>Forces persona definition if a user story is ready or in production</description>
    <errorConditionFormula>OR(
ISPICKVAL(TMFC_User_Story_Status__c, "In Production - Closed") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Ready to dev integrate") , 
ISPICKVAL(TMFC_User_Story_Status__c, "Ready for prod deploy")) &amp;&amp; 
ISBLANK(Affected_Personas__c)</errorConditionFormula>
    <errorMessage>Please add the personas that are affected by this user story</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Add_release_notes</fullName>
    <active>true</active>
    <description>Forces release notes if a user story is ready or in production</description>
    <errorConditionFormula>OR(
ISPICKVAL(TMFC_User_Story_Status__c, "In Production - Closed") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Ready to dev integrate") , 
ISPICKVAL(TMFC_User_Story_Status__c, "Ready for prod deploy")) &amp;&amp; 
LEN(Release_Notes__c) = 0</errorConditionFormula>
    <errorMessage>You must add release notes for CRM analysts before putting this User Story into production</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Add_result_notes</fullName>
    <active>true</active>
    <description>Forces result notes if a user story is ready or in production</description>
    <errorConditionFormula>OR(
ISPICKVAL(TMFC_User_Story_Status__c, "In Production - Closed") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Ready to dev integrate") , 
ISPICKVAL(TMFC_User_Story_Status__c, "Ready for prod deploy")) &amp;&amp; 
LEN(internal_comment__c) = 0</errorConditionFormula>
    <errorMessage>You must add result notes before putting this User Story into production</errorMessage>
  </validationRules>
  <validationRules>
    <fullName>Add_sprint</fullName>
    <active>true</active>
    <description>A sprint is required when a user story progresses to Scheduled</description>
    <errorConditionFormula>NOT(OR(
ISPICKVAL(TMFC_User_Story_Status__c, "New") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Grooming") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Backlog") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Roadblock - paused") ,
ISPICKVAL(TMFC_User_Story_Status__c, "Cancelled"))) 
&amp;&amp;
TMFC_TeamForce_Sprint__c = null
&amp;&amp;
 ISPICKVAL(Area__c, "Development")</errorConditionFormula>
    <errorMessage>You must add a sprint before putting this User Story into Scheduled</errorMessage>
  </validationRules>
</CustomObject>